@@ -14,7 +14,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.12'
+generated_by: 'Module::Install version 1.14'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -33,4 +33,4 @@ resources:
   homepage: https://github.com/tupinek/Acme-CPANAuthors-Czech
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/tupinek/Acme-CPANAuthors-Czech
-version: 0.15
+version: '0.15'
