@@ -1,5 +1,6 @@
 0.15
  - Update README file.
+ - Update Module::Install to 1.14 version.
 
 0.14 2014-09-08T01:05:04+02:00
  - Add KOLCON CPAN account.
